<resources>
    <string name="app_name">ArchitectureSample</string>
    <string name="first_name">First Name</string>
    <string name="country">Country</string>
    <string name="age_header">Age</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age %1$s</string>
    <string name="logged_in_success">Login successful</string>
    <string name="logged_in_error">Login error</string>
    <string name="login">Login</string>
    <string name="hint_user_email">Email</string>
    <string name="hint_user_pass">Password</string>
    <string name="inputs_invalid">Inputs not valid</string>
    <string name="login_error">Could not login, sorry&#8230;</string>
    <string name="login_success">Login success !</string>
    <string name="user_image_content_desc">user image</string>
    <string name="login_user">Please login</string>
    <string name="user_list_label">Users</string>
    <string name="splash_screen_label">Splash Screen</string>
    <string name="available_users">Users</string>
    <string name="error_loading_users">Could not load users</string>
    <string name="error_adding_user">Could not add user, please retry</string>
    <string name="add_user_success">User added successfully</string>
    <string name="error_fragment">error_fragment</string>
    <string name="error_no_internet_connection_io">No internet connection.</string>
    <string name="label_new_user">Add User</string>
    <string name="label_user_details">User Details</string>
    <string name="add_user">Add User</string>
    <string name="first_name_not_valid">First name not valid</string>
    <string name="last_name_not_valid">Last name not valid</string>
    <string name="country_name_not_valid">Country name not valid</string>
    <string name="age_not_valid">Age not valid</string>
    <string name="search_for_user">Search for user</string>
    <string name="no_users">No one found</string>
    <string name="menu_user_list">Users</string>
    <string name="search_people">Search People</string>
    <string name="menu_add_user">Add User</string>
    <string name="menu_account">Account</string>
    <string name="account_details">Your account details</string>
    <string name="about">About %s</string>
    <string name="log_out">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_load_users">Could not load users</string>
    <string name="users_loaded">Users loaded</string>
    <string name="all_users">Available Users</string>
    <string name="browse_all_people">browse them</string>
    <string name="logging_out">Logging out…</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
</resources>
